[metadata]
name = 304
version = 1.0.0
description = 304 the game
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms=['any']

[options]
packages = find:
install_requires =
    fastapi>=0.103.2
    orjson>=3.9.4

python_requires = >=3.9

[options.packages.find]
exclude = contrib; docs; test; test.*; test.plugins; test.plugins.*

[options.entry_points]
console_scripts = 304 = 304.__main__:main
